--- a/bootstrap/founopticum-cleanup.yaml
+++ b/bootstrap/founopticum-cleanup.yaml
@@ -7,13 +7,13 @@ Parameters:
     Default: superluminar-io
   RepositoryName:
     Type: String
-    Default: founopticum
+    Default: superwerker
   BranchName:
     Type: String
     Default: master
   GithubTokenSecretsManagerPath:
     Type: String
-    Default: /founopticum/github-token
+    Default: /superwerker/github-token
 
 Resources:
 
@@ -49,10 +49,10 @@ Resources:
                 Owner: !Ref GitHubOwner
                 Repo: !Ref RepositoryName
                 Branch: !Ref BranchName
-                OAuthToken: '{{resolve:secretsmanager:/founopticum/github-token:SecretString}}'
+                OAuthToken: '{{resolve:secretsmanager:/superwerker/github-token:SecretString}}'
                 PollForSourceChanges: false
 
-        - Name: InstallFounopticum
+        - Name: InstallSuperwerker
           Actions:
             - ActionTypeId:
                 Category: Build
@@ -102,7 +102,7 @@ Resources:
               Configuration:
                 ActionMode: DELETE_ONLY
                 RoleArn: !GetAtt CleanupBuildProjectRole.Arn
-                StackName: founopticum-00-control-tower
+                StackName: superwerker-00-control-tower
 
       ArtifactStore:
         Type: S3
@@ -138,11 +138,11 @@ Resources:
           env:
             shell: bash
             parameter-store:
-              ou_core: /founopticum/ou_core
-              ou_custom: /founopticum/ou_custom
-              ou_graveyard: /founopticum_bootstrap/ou_graveyard
-              account_id_logarchive: /founopticum/account_id_logarchive
-              account_id_audit: /founopticum/account_id_audit
+              ou_core: /superwerker/ou_core
+              ou_custom: /superwerker/ou_custom
+              ou_graveyard: /superwerker_bootstrap/ou_graveyard
+              account_id_logarchive: /superwerker/account_id_logarchive
+              account_id_audit: /superwerker/account_id_audit
           phases:
             build:
               commands:
@@ -316,7 +316,7 @@ Resources:
               const AWS = require("aws-sdk");
 
               const federationEndpoint = 'https://signin.aws.amazon.com/federation';
-              const issuer = 'founopticum';
+              const issuer = 'superwerker';
               const destination = 'https://console.aws.amazon.com/';
 
               let credentials = await AWS.config.credentialProvider.resolve((err, cred) => { return cred; }).resolvePromise()
