make sure control tower setup artifact bucket is kept clean
by using lifecycle policies.
so we can remove the retain hack

--- a/components/00-control-tower.yaml
+++ b/components/00-control-tower.yaml
@@ -125,7 +125,12 @@ Resources:
 
   SetupControlTowerArtifactLocation:
     Type: AWS::S3::Bucket
-    DeletionPolicy: Retain
+    Properties:
+      LifecycleConfiguration:
+        Rules:
+          - ExpirationInDays: 1
+            Status: Enabled
+
 
   SetupControlTowerArtifactLocationPolicy:
     Type: AWS::S3::BucketPolicy
