--- a/components/04-security-hub.yaml
+++ b/components/04-security-hub.yaml
@@ -4,43 +4,15 @@ Description: Sets up SecurityHub with a delegated administor and automatically e
 
 Resources:
 
-  SetupLandingZoneTrigger:
+  LandingZoneSetupFinishedTrigger:
     Type: AWS::Events::Rule
     Properties:
       EventPattern:
-        detail-type:
-          - AWS Service Event via CloudTrail
         source:
-          - aws.controltower
-          - superwerker.security-hub-test
+          - superwerker
         detail:
-          serviceEventDetails:
-            setupLandingZoneStatus:
-              state:
-                - SUCCEEDED
           eventName:
-            - SetupLandingZone
-      State: ENABLED
-      Targets:
-        - Arn: !Sub arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:automation-definition/${CreateLandingZoneEnableSecurityHub}
-          Id: EnableSecurityHubOrganizations
-          RoleArn: !GetAtt SSMAutomationExecutionRoleforCWEvents.Arn
-
-  UpdateLandingZoneTrigger:
-    Type: AWS::Events::Rule
-    Properties:
-      EventPattern:
-        detail-type:
-          - AWS Service Event via CloudTrail
-        source:
-          - aws.controltower
-        detail:
-          serviceEventDetails:
-            updateLandingZoneStatus:
-              state:
-                - SUCCEEDED
-          eventName:
-            - UpdateLandingZone
+            - LandingZoneSetupOrUpdateFinished
       State: ENABLED
       Targets:
         - Arn: !Sub arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:automation-definition/${CreateLandingZoneEnableSecurityHub}
