fix(cleanup) remove logarchive ssm parameter as well

--- a/tests/cleanup-pipeline.yaml
+++ b/tests/cleanup-pipeline.yaml
@@ -168,6 +168,7 @@ Resources:
                 # remove former parameters
                 - aws ssm delete-parameter --name /superwerker/account_id_audit || true
                 - aws ssm delete-parameter --name /superwerker/account_id_master || true
+                - aws ssm delete-parameter --name /superwerker/account_id_logarchive || true
                 - aws ssm delete-parameter --name /superwerker/ou_core || true
                 - aws ssm delete-parameter --name /superwerker/ou_custom || true
                 - aws ssm delete-parameter --name /superwerker_bootstrap/email_adresses || true
