--- a/components/00-control-tower.yaml
+++ b/components/00-control-tower.yaml
@@ -37,7 +37,7 @@ Resources:
   SetupControlTowerCanary:
     Type: AWS::Synthetics::Canary
     Properties:
-      Name: fnptcm-bootstrap-ct
+      Name: superwerker-ct-setup
       ArtifactS3Location: !Sub s3://${SetupControlTowerArtifactLocation}
       ExecutionRoleArn: !GetAtt SetupControlTowerCanaryRole.Arn
       RuntimeVersion: syn-1.0
