cleanup canary is triggered manually

--- a/tests/cleanup-pipeline.yaml
+++ b/tests/cleanup-pipeline.yaml
@@ -294,7 +294,7 @@ Resources:
       ArtifactS3Location: !Sub s3://${DecommissionLandingZoneArtifactLocation}
       ExecutionRoleArn: !GetAtt DecommissionLandingZoneCanaryRole.Arn
       RuntimeVersion: syn-1.0
-      StartCanaryAfterCreation: true
+      StartCanaryAfterCreation: false
       RunConfig:
         TimeoutInSeconds: 600
       Schedule:
