add missing json lib

--- a/components/00-control-tower.yaml
+++ b/components/00-control-tower.yaml
@@ -188,6 +188,7 @@ Resources:
 
       InlineCode: |-
         import boto3
+        import json
 
         ssm = boto3.client('ssm')
         events = boto3.client('events')
