fix superwerker event trigger
detail-type is a mandatory field for put_events

--- a/components/00-control-tower.yaml
+++ b/components/00-control-tower.yaml
@@ -213,6 +213,7 @@ Resources:
           events.put_events(
               Entries=[
                   {
+                      'DetailType': 'superwerker-event',
                       'Detail': json.dumps(
                           {
                               'eventName': 'LandingZoneSetupOrUpdateFinished',
