--- a/components/00-control-tower.yaml
+++ b/components/00-control-tower.yaml
@@ -100,22 +100,37 @@ Resources:
               await page.goto("https://eu-west-1.console.aws.amazon.com/controltower/home?region=eu-west-1", {waitUntil: ['load', 'networkidle0']});
             });
 
+            let landingZoneState;
             await synthetics.executeStep('gotoLlandingZoneCreation', async function () {
-              await page.click("#get-started-btn > button");
-              await page.waitFor(10000); // waitForNavigation does not work here, so use sleep()
+
+              if (await page.$('#get-started-btn > button') !== null) {
+                landingZoneState = 'new';
+                await page.click('#get-started-btn > button');
+                await page.waitFor(10000); // waitForNavigation does not work here, so use sleep()
+              } else {
+                landingZoneState = 'existing';
+                await page.goto('https://eu-west-1.console.aws.amazon.com/controltower/home/update?region=eu-west-1', {waitUntil: ['load', 'networkidle0']});
+              }
             });
 
-            await synthetics.executeStep('createLandingZone', async function () {
-              await page.click("#awsui-input-0")
-              await page.click("#awsui-input-1")
-              await page.click("#awsui-input-2")
-              await page.type("#awsui-input-0", "${LogArchiveAWSAccountEmail}")
-              await page.type("#awsui-input-1", "${AuditAWSAccountEmail}")
-              await page.click("#awsui-checkbox-0")
-              await page.waitFor(10000); // wait for AWS UI to settle, then click
-              await page.click("#save-button > button");
-              await page.waitForNavigation({waitUntil: ['domcontentloaded']});
-            });
+            if (landingZoneState == 'new') {
+              await synthetics.executeStep('createLandingZone', async function () {
+                await page.click("#awsui-input-0")
+                await page.click("#awsui-input-1")
+                await page.click("#awsui-input-2")
+                await page.type("#awsui-input-0", "${LogArchiveAWSAccountEmail}")
+                await page.type("#awsui-input-1", "${AuditAWSAccountEmail}")
+                await page.click("#awsui-checkbox-0")
+                await page.waitFor(10000); // wait for AWS UI to settle, then click
+                await page.click("#save-button > button");
+                await page.waitForNavigation({waitUntil: ['domcontentloaded']});
+              });
+          } else {
+              await synthetics.executeStep('updateLandingZone', async function () {
+                await page.click("#save-button > button")
+                await page.waitForNavigation({waitUntil: ['domcontentloaded']});
+              });
+          }
 
           };
 
