clean s3 bucket so that cfn can delete it

--- a/components/00-control-tower.yaml
+++ b/components/00-control-tower.yaml
@@ -141,6 +141,7 @@ Resources:
   SetupControlTowerArtifactLocation:
     Type: AWS::S3::Bucket
     Properties:
+      BucketName: !Sub superwerker-cwsyn-artifacts-${AWS::AccountId}
       LifecycleConfiguration:
         Rules:
           - ExpirationInDays: 1
