--- a/tests/pipeline.yaml
+++ b/tests/pipeline.yaml
@@ -301,6 +301,12 @@ Resources:
                 # ensure clean state for tests
                 - python3 tests/cleanup.py
 
+                # remove former superwerker parameters
+                - aws ssm delete-parameter --name /superwerker/account_id_audit || true
+                - aws ssm delete-parameter --name /superwerker/account_id_master || true
+                - aws ssm delete-parameter --name /superwerker/account_id_logarchive || true
+
+
 
   CleanupBuildProjectRole:
     Type: AWS::IAM::Role
