--- a/components/xx-rootmail.yaml
+++ b/components/xx-rootmail.yaml
@@ -84,6 +84,10 @@ Resources:
         FailureThreshold: 3
         FullyQualifiedDomainName: !Sub ${Subdomain}.${Domain}
         RequestInterval: 30
+        Regions:
+          - ap-northeast-1
+          - eu-west-1
+          - us-east-1
         Type: HTTP
       HealthCheckTags:
         - Key: Name
@@ -94,7 +98,7 @@ Resources:
     Properties:
       AliasTarget:
         DNSName: !Sub
-          - "${DomainBucket}.${Endpoint}"
+          - ${Endpoint}
           - Endpoint: !FindInMap
             - RegionMap
             - !Ref "AWS::Region"
